Completed endpoint structure and responses (#39)
