# lib/server.js
@@ -39,13 +39,8 @@ const { createBody,
 /* Whiteflag modules */
 const wfConfig = require('./config');
 
-/* Whiteflag modules with endpoint operations */
-const wfApiSingletonsHandler = require('./operations/singletons');
-const wfApiMessagesHandler = require('./operations/messages');
-const wfApiBlockchainsHandler = require('./operations/blockchains');
-const wfApiOriginatorsHandler = require('./operations/originators');
-const wfApiTokensHandler = require('./operations/tokens');
-const wfApiQueuesHandler = require('./operations/queues');
+/* Whiteflag endpoint definitions */
+const wfApiEndpoints = require('./operations/_common/endpoints').wfApiEndpoints;
 
 /* Module constants */
 const MODULELOG = 'server';
@@ -53,73 +48,6 @@ const SOCKETPATH = '/socket';
 const OPENAPIFILE = '../static/openapi.json';
 const PORT_LOWEST = 1
 const PORT_HIGHEST = 65536
-
-/**
- * @constant {Array} wfApiEndpoints
- * @todo Restructure endpoints (#)
- */
-const wfApiEndpoints = [
-
-    // COLLECTIONS
-
-    // Messages
-    [ '/messages', 'GET', 'getMessages', wfApiMessagesHandler.getMessages ],
-    [ '/messages', 'POST', 'sendMessage', wfApiMessagesHandler.sendMessage ],
-    [ '/messages/:transactionHash', 'GET', 'getMessage', wfApiMessagesHandler.getMessage ],
-    [ '/messages/:transactionHash', 'PUT', 'receiveMessage', wfApiMessagesHandler.receiveMessage ],
-    [ '/messages/references', 'GET', 'getMessageReferences', wfApiMessagesHandler.getReferences ],
-    [ '/messages/sequence', 'GET', 'getMessageSequence', wfApiMessagesHandler.getSequence ],
-
-    // Blockchains
-    [ '/blockchains', 'GET', 'getAllBlockchains', wfApiBlockchainsHandler.getAllBlockchains ],
-    [ '/blockchains/:blockchain', 'GET', 'getBlockchainState', wfApiBlockchainsHandler.getBlockchain ],
-    [ '/blockchains/:blockchain/scan', 'GET', 'scanBlocks', wfApiBlockchainsHandler.scanBlocks ],
-
-    // Blockchain accounts
-    [ '/blockchains/:blockchain/accounts', 'GET', 'getAccounts', wfApiBlockchainsHandler.getAccounts ],
-    [ '/blockchains/:blockchain/accounts', 'POST', 'createAccount', wfApiBlockchainsHandler.createAccount ],
-    [ '/blockchains/:blockchain/accounts/:account', 'GET', 'getAccount', wfApiBlockchainsHandler.getAccount ],
-    [ '/blockchains/:blockchain/accounts/:account', 'PATCH', 'updateAccount', wfApiBlockchainsHandler.updateAccount ],
-    [ '/blockchains/:blockchain/accounts/:account', 'DELETE', 'deleteAccount', wfApiBlockchainsHandler.deleteAccount ],
-
-    // Blockchain account signature and transfer operations
-    [ '/blockchains/:blockchain/accounts/:account/sign', 'POST', 'createSignature', wfApiBlockchainsHandler.createSignature ],
-    [ '/blockchains/:blockchain/accounts/:account/transfer', 'POST', 'transferFunds', wfApiBlockchainsHandler.transferFunds ],
-
-    // Originators
-    [ '/originators', 'GET', 'getAllOriginators', wfApiOriginatorsHandler.getAllOriginators ],
-    [ '/originators/:address', 'GET', 'getOriginator', wfApiOriginatorsHandler.getOriginator ],
-    [ '/originators/:address', 'PATCH', 'updateOriginator', wfApiOriginatorsHandler.updateOriginator ],
-    [ '/originators/:address', 'DELETE', 'deleteOriginator', wfApiOriginatorsHandler.deleteOriginator ],
-
-    // Originator pre-shared encryption keys
-    [ '/originators/:address/psk/:account', 'GET', 'getPreSharedKey', wfApiOriginatorsHandler.getPreSharedKey ],
-    [ '/originators/:address/psk/:account', 'PUT', 'storePreSharedKey', wfApiOriginatorsHandler.storePreSharedKey ],
-    [ '/originators/:address/psk/:account', 'DELETE', 'deletePreSharedKey', wfApiOriginatorsHandler.deletePreSharedKey ],
-
-    // Authentication tokens
-    [ '/tokens', 'POST', 'storeAuthToken', wfApiTokensHandler.store ],
-    [ '/tokens/:authTokenId', 'GET', 'getAuthToken', wfApiTokensHandler.get ],
-    [ '/tokens/:authTokenId', 'DELETE', 'deleteAuthToken', wfApiTokensHandler.delete ],
-
-    // Queue endpoint
-    [ '/queues/:queue', 'GET', 'getQueue', wfApiQueuesHandler.getQueue ],
-
-    // SINGLETONS
-
-    // Message operations endpoints
-    [ '/message/validate', 'POST', 'validateMessage', wfApiSingletonsHandler.validateMessage ],
-    [ '/message/encode', 'POST', 'encodeMessage', wfApiSingletonsHandler.encodeMessage ],
-    [ '/message/decode', 'POST', 'decodeMessage', wfApiSingletonsHandler.decodeMessage ],
-
-    // Signature operations endpoints
-    [ '/signature/decode', 'POST', 'decodeSignature', wfApiSingletonsHandler.decodeSignature ],
-    [ '/signature/verify', 'POST', 'verifySignature', wfApiSingletonsHandler.verifySignature ],
-
-    // Token operations endpoints
-    [ '/token/verify', 'POST', 'verifyToken', wfApiSingletonsHandler.verifyToken ],
-
-];
 
 /* Module objects */
 let _wfApi;
@@ -294,7 +222,7 @@ function createEndpoints(endpointCb, callback) {
         return callback(new Error('Could not bind endpoint routes to handlers: Server not started'));
     }
     try {
-        // Message controller endpoints
+        // Loop through endpoints
         for (const endpoint of wfApiEndpoints) {
             if (!Object.hasOwn(_wfApiConfig.endpoints, endpoint[OPERATIONID])
                 || _wfApiConfig.endpoints[endpoint[OPERATIONID]]) {
